# rocm-wyoming-whisper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: run.sh
src/wyoming_whisper/: __main__.py  handler.py
